# ai_act_project

./: .env  .env.example  .gitignore  ACTUALIZACION_DOCKER_SHACL.md  ANALISIS_ONTOLOGIA_v0.37.0.md  ARCHITECTURE_SHACL.md  ARTICLE5_TEST_REPORT.md  BACKEND_DERIVATION_COMPLETE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DOCKER_IMPROVEMENTS_COMPLETE.md  DOCUMENTATION_INDEX.md  EJEMPLOS_SHACL_CURL.md  FRONTEND_REORGANIZATION_TESTING.md  FRONTEND_SYSTEM_FORM_GUIDE.md  IMPACTO_FLUJO_EVALUACION.md  IMPLEMENTACION_SHACL_EN_REASONING.md  IMPLEMENTACION_v0.37.1.md  IMPLEMENTATION_SUMMARY.md  INDICE_ANALISIS.md  LICENSE  LICENSES  LLAMA_FINE_TUNING_STRATEGY.md  METRICAS_ANALISIS.md  ONTOLOGY_SIMPLIFICATION_PLAN.md  PHASE_3_COMPLETION_SUMMARY.md  QUICK_START.md  README.md  README_COMPRENSIVO.md  RESTRICCIONES_OWL_EXPLICACION.md  RESUMEN_ANALISIS.txt  SECURITY.md  SESSION_SUMMARY.md  SHACL_EXPLICACION_DETALLADA.md  TESTING_GUIDE_PHASE_3.md  VERIFICATION_REPORT.md  algorithm_test_result.json  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Dockerfile  README.md  db.py  derivation.py  fuseki.py  main.py  pyproject.toml  requirements.txt  swrl_rules.py
backend/models/: assessment.py  base.py  compliance.py  criterion.py  purpose.py  risklevel.py  system.py  system_fuseki.py
backend/routers/: assessments.py  compliance.py  criteria.py  purposes.py  reasoning.py  risklevels.py  systems.py  systems_fuseki.py
backend/schema/: json-ld-context.json
backend/services/: mongo_crud.py
docs/: FORENSIC_AGENT_ARCHITECTURE.md  ONTOLOGY_GUIDE.md  (+8 more)
(+359 files in other folders)
