[tool.poetry]
name = "risk-assessment-backend"
version = "0.1.0"
description = "Backend FastAPI for AI Risk Assessment"
authors = ["Tu Nombre <email@ejemplo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110"
pydantic = "^2.0"
uvicorn = { extras = ["standard"], version = "^0.27" }
rdflib = "^7.0"
sparqlwrapper = "^2.0"
motor = "^3.3.1"
pymongo = "^4.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"